...
          alignItems: 'center',
          justifyContent: 'center',
          backgroundColor: '#3578E5',
          paddingTop: 40,
        }}
      >
        <TouchableOpacity onPress={() => this.props.navigation.navigate('Dashboard')} testID="exitExplore">
          <FontAwesome5 name="arrow-left" size={30} color="white" />
        </TouchableOpacity>
        <SearchBar
          containerStyle={{
            marginLeft: 10,
            marginRight: 10,
...
          onSubmitEditing={() => this.updateMapCenterByQuery()}
          placeholder="Search"
          value={this.state.search}
        />
        <TouchableOpacity
          onPress={() => this.toggleView(this.state.viewMode === 'map' ? 'list' : 'map')}
          testID="toggleExploreViewMode"
        >
          <FontAwesome5
            name={this.state.viewMode === 'map' ? 'list' : 'map-marked'}
            size={30}
            color="white"
          />
...
      </Modal>
    );

    // LIST VIEW of nearby courts
    if (this.state.viewMode === 'list') {
      return (
        <View style={[styles.container]} testID="ExploreListContainer">
          {modal}
          {header}
          {loadingIndicator}
          <FlatList
            data={this.props.nearbyCourts}
            keyExtractor={(item, i) => i.toString()}
...
          );
        }
        addCourtAnnotation = this.returnAddCourtAnnotation(this.state.mapCenter);
      }

      return (
        <View style={[styles.container]} testID="ExploreMapContainer">
          {modal}
          {header}
          {selectLocation}
          {addCourtName}
          {/* <Mapbox.MapView
            ref={(c) => (this._mapView = c)}
...
